syntax = "proto3";

package v2ray.core.common.serial;
option go_package = "serial";
option java_package = "com.v2ray.core.common.serial";
option java_outer_classname = "TypedMessageProto";

// Serialized proto message along with its type name.
message TypedMessage {
  // The name of the message type, retrieved from protobuf API.
  string type = 1;
  // Serialized proto message. 
  bytes value = 2;
}
